repair module remote-redux-devtools-on-debugger,demote module socketcluster to 4.x.x.

--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "15.1.0",
     "react-native-debugger-open": "^0.2.1",
     "react-native-mock": "^0.2.3",
+    "remotedev-server": "0.1.5",
     "remote-redux-devtools": "^0.3.1",
     "remote-redux-devtools-on-debugger": "^0.4.4",
     "rnpm": "^1.4.1",
