--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "immutable": "^3.7.6",
     "lodash": "^4.3.0",
-    "react": "^15.1.0",
+    "react": "15.1.0",
     "react-native": "^0.27.1",
     "react-native-drawer-layout": "^1.0.0",
     "react-native-easy-grid": "^0.1.6",
