--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-easy-grid": "^0.1.6",
     "react-native-nav": "^1.1.4",
     "react-native-root-toast": "^1.0.3",
+    "react-native-storage": "^0.1.3",
     "react-native-swiper": "^1.4.8",
     "react-redux": "^4.4.0",
     "redux": "^3.3.1",
