--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,7 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+MYAPP_RELEASE_STORE_FILE=zhihu-release-key.keystore
+MYAPP_RELEASE_KEY_ALIAS=zhihu-release-key.keystore
+MYAPP_RELEASE_STORE_PASSWORD=zhihurn
+MYAPP_RELEASE_KEY_PASSWORD=zhihurn
