--- a/package.json
+++ b/package.json
@@ -1,27 +1,32 @@
 {
   "name": "ZhihuDaily",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "ios-open": "open ios/*.xcodeproj",
     "ios": "node node_modules/react-native/local-cli/cli.js run-ios",
     "android": "node node_modules/react-native/local-cli/cli.js run-android",
+    "link": "node node_modules/react-native/local-cli/cli.js link",
     "lint": "eslint src test *.js",
     "test": "mocha --recursive --compilers js:babel-core/register -r test/setup",
-    "cover": "babel-node node_modules/.bin/isparta cover _mocha -- --recursive -r test/setup",
-    "remotedev": "remotedev-debugger --hostname localhost --port 5678 --injectserver",
-    "postinstall": "node necard-patch.js && rnpm link && npm run remotedev && rndebugger-open",
+    "cover": "nyc npm test",
+    "remotedev": "remotedev-debugger --injectserver",
+    "postinstall": "npm run link && npm run remotedev && rndebugger-open",
     "android-release": "code-push release-react react-native-redux-zhihudaily android --des '测试热更新，改变标题栏颜色'",
     "ios-release": "code-push release-react react-native-redux-zhihudaily-ios ios --des '测试热更新，改变标题栏颜色'",
     "android-history": "code-push deployment history react-native-redux-zhihudaily Staging",
     "ios-history": "code-push deployment history react-native-redux-zhihudaily-ios Staging"
   },
+  "remotedev": {
+    "hostname": "localhost",
+    "port": 5678
+  },
   "dependencies": {
     "immutable": "^3.7.6",
     "lodash": "^4.3.0",
-    "react": "15.1.0",
-    "react-native": "^0.27.1",
+    "react": "15.4.2",
+    "react-native": "0.40.0",
     "react-native-code-push": "^1.16.1-beta",
     "react-native-drawer-layout": "^1.0.0",
     "react-native-easy-grid": "^0.1.6",
@@ -42,24 +47,23 @@
     "babel-preset-react-native": "^1.4.0",
     "chai": "^3.5.0",
     "enzyme": "^2.0.0",
-    "eslint": "^2.5.3",
-    "eslint-config-airbnb": "^9.0.0",
-    "eslint-plugin-import": "^1.8.0",
-    "eslint-plugin-jsx-a11y": "^1.2.1",
-    "eslint-plugin-react": "^5.1.1",
+    "eslint": "^3.2.2",
+    "eslint-config-airbnb": "^10.0.0",
+    "eslint-plugin-import": "^1.12.0",
+    "eslint-plugin-jsx-a11y": "^2.0.1",
+    "eslint-plugin-react": "^6.0.0",
     "immutable-devtools": "0.0.7",
-    "isparta": "^4.0.0",
-    "mocha": "^2.4.5",
+    "jsdom": "^9.4.1",
+    "mocha": "^3.0.1",
     "node-fetch": "^1.3.3",
+    "nyc": "^8.1.0",
     "proxyquire": "^1.7.4",
-    "react-addons-test-utils": "15.1.0",
-    "react-dom": "15.1.0",
-    "react-native-debugger-open": "^0.2.1",
+    "react-addons-test-utils": "15.3.2",
+    "react-dom": "15.3.2",
+    "react-native-debugger-open": "^0.3.0",
     "react-native-mock": "^0.2.3",
-    "remotedev-server": "0.1.5",
-    "remote-redux-devtools": "^0.3.1",
-    "remote-redux-devtools-on-debugger": "^0.4.4",
-    "rnpm": "^1.4.1",
+    "remote-redux-devtools": "^0.4.1",
+    "remote-redux-devtools-on-debugger": "^0.6.0",
     "sinon": "^1.17.2"
   }
 }
