--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo": "^17.0.0",
     "native-base": "^2.1.5",
     "react": "16.0.0-alpha.6",
-    "react-native": "^0.44.0"
+    "react-native": "^0.44.0",
+    "react-native-swiper": "^1.5.4"
   }
 }
