--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^0.16.2",
     "dva": "^1.3.0-beta.3",
     "expo": "^17.0.0",
+    "moment": "^2.18.1",
     "native-base": "^2.1.5",
     "react": "16.0.0-alpha.6",
     "react-native": "^0.44.0",
